Fix footer to not overlap page content

--- a/css/index.css
+++ b/css/index.css
@@ -180,5 +180,5 @@ body {
 	left: 30%;
 	right: 30%;
 	text-align: center;
-	position: relative;
+	position: fixed;
 }
